--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
   <body>
     <div class="input-area">
-      <input placeholder="TODOを入力" />
-      <button>追加</button>
+      <input id="add-text" placeholder="TODOを入力" />
+      <button id="add-btn">追加</button>
     </div>
     <div class="incomplete-area">
       <p class="title">未完了のTODO</p>
-      <ul>
+      <ul id="incomplete-list">
         <li class="list-row">
-          TODO
+          <span>TODO</span>
           <button>完了</button>
           <button>削除</button>
         </li>
