--- a/index.html
+++ b/index.html
@@ -12,22 +12,11 @@
     </div>
     <div class="incomplete-area">
       <p class="title">未完了のTODO</p>
-      <ul id="incomplete-list">
-        <li class="list-row">
-          <span>TODO</span>
-          <button>完了</button>
-          <button>削除</button>
-        </li>
-      </ul>
+      <ul id="incomplete-list"></ul>
     </div>
     <div class="complete-area">
       <p class="title">完了したTODO</p>
-      <ul>
-        <li class="list-row">
-          TODO
-          <button>戻す</button>
-        </li>
-      </ul>
+      <ul id="complete-list"></ul>
     </div>
 
     <script src="src/index.js"></script>
